fixing overflow

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -14,6 +14,7 @@ body {
 #page {
 	min-height: 100%;
 	position: relative;
+  overflow-x: hidden !important;
 }
 
 //////////////////
