--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ body {
 #page {
   min-height: 100%;
   position: relative;
+  overflow-x: hidden !important;
 }
 
 h2, h3, h4, h5, h6 {
